Chart/commons-cli-normal/tests%20250617002527/compiler_output/CompilerOutput-TextStyle_14_1Test.java.txt
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/TextStyle_14_1Test.java:16: error: cannot find symbol
                .alignment(TextStyle.Alignment.CENTER)
                ^
  symbol:   method alignment(Alignment)
  location: class Builder
1 error
